lab-1.2/kubernetes/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: testcluster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /hw
        pathType: Prefix
        backend:
          service:
            name: hw-deployment
            port:
              number: 8000
